# topovision

./: .flake8  .gitattributes  .gitignore  Makefile  README.md  mypy.ini  pyproject.toml  requirements-dev.txt  requirements-light.txt  requirements.txt  run.bat  run.sh  run_tests.bat  run_tests.sh
.github/: dependabot.yml
.github/workflows/: ci-github-actions.yml  release.yml  tests.yml
docs/: architecture.md  github-flow-guide.md  installation_guide.md  mathematical_foundations.md  user-guide.md
src/topovision/: app.py  exceptions.py
src/topovision/calculus/: calculus_module.py  strategies.py
src/topovision/calculus/methods/: finite_diff.py  gradient.py  riemann.py
src/topovision/capture/: camera_backends.py  capture_module.py  preprocessing.py
src/topovision/core/: interfaces.py  models.py
src/topovision/gui/: analysis_panel.py  camera_controller.py  canvas_panel.py  gui_module.py  i18n.py  plot3d_window.py
src/topovision/services/: cache.py  task_queue.py
src/topovision/tests/: test_calculus.py  test_capture.py  test_preprocessing.py  test_visualization.py
src/topovision/utils/: math.py  perspective.py
src/topovision/visualization/: heatmap.py  plot3d.py  vector_overlay.py  visualization_module.py  visualizers.py
