[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "topovision"
version = "0.1.0"
description = "TopoVision - 3D Topographic Analysis System for Calculus II"
authors = [
    { name = "TopoVision Team", email = "code.with.botina@gmail.com" }
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.11"
keywords = ["computer-vision", "calculus", "topography", "3d-analysis", "education"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Image Processing",
]

dependencies = [
    "numpy==1.26.4",
    "scipy==1.14.1",
    "opencv-python==4.10.0.84",
    "Pillow==10.3.0",
    "matplotlib==3.9.2",
    "python-dotenv==1.0.1",
    "numba==0.60.0",
    "psutil==6.1.0"
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-cov==5.0.0",
    "flake8==7.1.1",
    "black==24.8.0",
    "isort==7.0.0",
    "mypy==1.13.0",
    "pre-commit==4.0.1",
    "pdoc==14.4.0",
    "ipython==8.28.0"
]

light = [
    "numpy==1.26.4",
    "opencv-python-headless==4.10.0.84",
    "Pillow==10.3.0",
    "matplotlib==3.9.2"
]

[project.scripts]
topovision = "topovision.__main__:main"

[project.urls]
Homepage = "https://github.com/JalaU-Capstones/topovision"
Documentation = "https://github.com/JalaU-Capstones/topovision/blob/main/README.md"
Repository = "https://github.com/JalaU-Capstones/topovision"
Issues = "https://github.com/JalaU-Capstones/topovision/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --cov=src"
testpaths = ["src/topovision/tests"]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
